--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://www.svgrepo.com/show/94662/shopping-cart.svg"
       type="image/x-icon"
     />
-    <title>Cart ~ Context-API</title>
+    <title>DummyCart | Context-API</title>
   </head>
   <body>
     <div id="root"></div>
